Bug 1190635 - Don't early-return for an mHeight change, since width changes can add extra change hints. r=heycam, a=ritu

Don't return early for an mWidth change either.